--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,27 @@ body {
 
 .realtors {
   background-color: #101d2c;
-  grid-column: col-start 7 / -1; }
+  grid-column: col-start 7 / -1;
+  padding: 3rem;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  row-gap: 2rem;
+  justify-items: center; }
+  .realtors__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    column-gap: 2rem;
+    row-gap: 3vh;
+    align-items: center; }
+  .realtors__img {
+    width: 7rem;
+    border-radius: 100%;
+    display: block; }
+  .realtors__sold {
+    text-transform: uppercase;
+    color: #aaa;
+    margin-top: -3px; }
 
 .features {
   grid-column: center-start / center-end;
