--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -8,6 +8,11 @@
 		grid-template-rows: repeat(6, 1fr);
 		grid-template-columns: repeat(6, 1fr);
 		align-items: center;
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / -1;
+			padding: 3rem;
+		}
 	}
 
 	&__img--1 {
@@ -15,6 +20,11 @@
 		grid-row: 2 / 6;
 		grid-column: 2 / 6;
 		box-shadow: 0 2rem 5rem rgba(0,0,0, 0.1);
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / 5;
+			grid-row: 1 / -1 ;
+		}
 	}
 
 	&__img--2 {
@@ -23,13 +33,23 @@
 		grid-column: 4 / 7;
 		z-index: 999;
 		box-shadow: 0 2rem 5rem rgba(0,0,0, 0.2);
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-row: 1 / -1;
+			width: 100%;
+		}
 	}
 
 	&__content {
 		background-color: $color-grey-light-1;
 		grid-column: col-start 5 / full-end;
 
-		padding: 6rem 12vh;
+		padding: 6rem 8vh;
+
+		@media only screen and (max-width: $bp-medium) {
+			grid-column: 1 / -1;
+			grid-row: 5 / 6;
+		}
 
 // WE CAN USE FLEXBOX
 		// display: flex;
